--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="textsize_datetime_transaction">8sp</dimen>
     <dimen name="textsize_description_transaction">14sp</dimen>
     <dimen name="textsize_amount_transaction">35sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
